fix shift

--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@ body {
     width: 25.0%;
 }
 
+.author-col4 {
+    width: 33.0%;
+}
+
 .affiliation-col {
     width: 33.3%; 
     font-size: 16px;
